fix: narrowing header css gap, downgrading SA 11.16.1 > 11.4.8 to prevent vulnerability, dashboard adjustments

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -23,7 +23,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
+  gap: 15px;
 }
 
 .greeting {
@@ -107,6 +107,9 @@
   }
   .menu {
     font-size: 2em;
+  }
+  .left-section {
+    gap: 20px;
   }
 }
 
